함수 수정 완료

--- a/student.html
+++ b/student.html
@@ -118,7 +118,7 @@
             return ["", "", ""];
         });
         students.push(function get201344053() {
-            return ["", "", ""];
+            return ["201344053", "유준", "100"];
         });
         students.push(function get201344059() {
             return ["", "", ""];
