--- a/student.html
+++ b/student.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <script type="text/javascript">
@@ -169,7 +169,7 @@
             return ["", "", ""];
         });
         students.push(function get201644044() {
-            return ["", "", ""];
+            return ["201644044", "김에스더", "90"];
         });
         students.push(function get201644045() {
             return ["", "", ""];
