파일 수정 완료

--- a/student.html
+++ b/student.html
@@ -148,7 +148,7 @@
             return ["", "", ""];
         });
         students.push(function get201444068() {
-            return ["", "", ""];
+            return ["201444068", "이해준", "70"];
         });
         students.push(function get201444070() {
             return ["", "", ""];
